# snapshot-restore

./: .gitignore  Cargo.toml  TODO.md  commits.sh  settings.example.toml
src/: aws.rs  cli_args.rs  main.rs  tui.rs
src/aws/: authentication.rs  ec2_client.rs  ec2_functions.rs
src/aws_authentication/: mod.rs
src/aws_ec2/: app_err.rs  aws_err.rs  mod.rs
src/cli/: mod.rs
src/cli_args/: mod.rs
src/tui/: mod.rs
