[package]
name = "snapshot_restore"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.6.1"
aws-sdk-ec2 = "1.121.0"
clap = { version = "4.5.34", features = ["derive"] }
config = "0.15.11"
futures = "0.3.31"
inquire = "0.7.5"
tokio = { version = "1.44.1", features = ["full"] }
rustls = "0.20.0"
hyper-rustls = "0.23.0"
aws-smithy-client = "0.54.1"  # Use a version compatible with your AWS SDK
